LAU-883 add functional tests